--- a/section5/src/App.css
+++ b/section5/src/App.css
@@ -2,10 +2,30 @@
   text-align: center;
 }
 
-.red {
-  color: red;
+:global .bold {
+  font-weight: bold;
 }
 
-.bold {
-  font-weight: bold;
+.App button {
+  background-color: green;
+  color: white;
+  font: inherit;
+  border: 1px solid #ddd;
+  padding: 8px;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.App button:hover {
+  background-color: lightgreen;
+  color: black;
+}
+
+.App button.Red {
+  background-color: red;
+}
+
+.App button.Red:hover {
+  background-color: darkred;
+  color: white;
 }
