extract cockpit toggle button style

--- a/section7/src/components/Cockpit/Cockpit.css
+++ b/section7/src/components/Cockpit/Cockpit.css
@@ -1,4 +1,6 @@
-.Cockpit button {
+
+
+.CockpitButton {
   background-color: green;
   color: white;
   font: inherit;
@@ -8,16 +10,17 @@
   cursor: pointer;
 }
 
-.Cockpit button:hover {
+.CockpitButton:hover {
   background-color: lightgreen;
   color: black;
+  border-color: #444;
 }
 
-.Cockpit button.Red {
+.CockpitButton.Red {
   background-color: red;
 }
 
-.Cockpit button.Red:hover {
+.CockpitButton.Red:hover {
   background-color: darkred;
   color: white;
 }
