basic Higher Order Components

--- a/section7/src/components/Cockpit/Cockpit.css
+++ b/section7/src/components/Cockpit/Cockpit.css
@@ -1,5 +1,3 @@
-
-
 .CockpitButton {
   background-color: green;
   color: white;
@@ -25,10 +23,16 @@
   color: white;
 }
 
-.Cockpit .red {
-  color: red;
+.Button {
+  color: black;
+  font: inherit;
+  border: 1px solid #ddd;
+  padding: 8px;
+  margin: 5px;
+  cursor: pointer;
 }
 
-.Cockpit .bold {
-  font-weight: bold;
+.Button:hover {
+  background-color: gray;
+  border: 1px solid #000;
 }
